Changed filters to json-ld
