# server/app/rest_api/routes/catalog.py
@@ -46,22 +46,26 @@ class CatalogRoutes(Routable):
         """
         Get the local catalog with dataset list.
 
-        The request accepts filters as a JSON object in the body.
+        The request accepts filters as a JSON-LD object in the body.
 
         ### Format:
-        Filters are structured as nested JSON objects. Each filter defines the path
+        Filters are structured as nested JSON-LD objects. Each filter defines the path
         to the field with optional operators or language annotations.
 
         ```json
         {
-          "context": {
+          "@context": {
+            "@vocab": "http://data-space.org/",
             "<namespace>": "<namespaceURL>",
             ...
           }
           "filters": [
             {
-              ["type": "<namespace:Class>",]
-              "<namespace:attribute>[@<lang>][__operator]": <value> | <nestedObject>
+              ["@type": "<[namespace:]Class>",]
+              "<[namespace:]attribute>[@<lang>]": <nestedObject> | <value> | {
+                "operation": "<operator>",
+                "operationValue": <value>
+              }
             },
             ...
           ]
@@ -69,25 +73,28 @@ class CatalogRoutes(Routable):
         ```
 
         ### Supported operators:
-        - `__gte`, `__lte` — range filtering
-        - `__in` — list filtering
-        - `__contains` — substring search
+        - `gte`, `lte` — range filtering
+        - `in` — list filtering
+        - `contains` — substring search
 
         ### Example:
         ```json
         {
-          "context": {
+          "@context": {
+            "@vocab": "http://data-space.org/",
             "dcat": "http://www.w3.org/ns/dcat#",
-            "dspace": "http://data-space.org/",
             "med": "http://med.example.org/"
           },
           "filters": [
             {
               "dcat:dataset": {
-                "dspace:extraMetadata": {
-                  "type": "med:Diagnoses",
+                "extraMetadata": {
+                  "@type": "med:Diagnoses",
                   "med:hasDiagnosis": {
-                    "med:code__contains": "I10"
+                    "med:code": {
+                      "operation": "contains",
+                      "operationValue": "I10"
+                    }
                   }
                 }
               }
@@ -98,55 +105,159 @@ class CatalogRoutes(Routable):
 
         ### More filter examples:
         - ```json
-          { "dcat:dataset": { "dcterms:title": "example" } }
+            {
+                "dcat:dataset": {
+                    "dcterms:title": "example"
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dcterms:title@en": "example" } }
+            {
+                "dcat:dataset": {
+                    "dcterms:title@en": "example"
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dcterms:title": { "@language": "en" } } }
+            {
+                "dcat:dataset": {
+                    "dcterms:title": {
+                        "@language": "en"
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dcterms:title": { "@value": "example" } } }
+            {
+                "dcat:dataset": {
+                    "dcterms:title": {
+                        "@value": "example"
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dcat:distribution": { "dcat:format": "PDF" } } }
+            {
+                "dcat:dataset": {
+                    "dcat:distribution": {
+                        "dcat:format": "PDF"
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dspace:extraMetadata": { "med:sex": "M" } } }
+            {
+                "dcat:dataset": {
+                    "extraMetadata": {
+                        "med:sex": "M"
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dspace:extraMetadata": { "type": "med:Patient",
-          "med:sex": "M" } } }
+            {
+                "dcat:dataset": {
+                    "extraMetadata": {
+                        "@type": "med:Patient",
+                        "med:sex": "M"
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dspace:extraMetadata": { "med:weight": 75 } } }
+            {
+                "dcat:dataset": {
+                    "extraMetadata": {
+                        "med:weight": 75
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dspace:extraMetadata": { "med:weight": {
-          "@value": 75 } } } }
+            {
+                "dcat:dataset": {
+                    "extraMetadata": {
+                        "med:weight": {
+                            "@value": 75
+                        }
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dspace:extraMetadata": { "med:weight": {
-          "@type": "xsd:integer" } } } }
+            {
+                "dcat:dataset": {
+                    "extraMetadata": {
+                        "med:weight": {
+                            "@type": "xsd:integer"
+                        }
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dcterms:datePublished__gte": "2021-01-01" } }
+            {
+                "dcat:dataset": {
+                    "dcterms:datePublished": {
+                        "operationValue": "2021-01-01",
+                        "operation": "gte"
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dcterms:datePublished__lte": "2021-12-31" } }
+            {
+                "dcat:dataset": {
+                    "dcterms:datePublished": {
+                        "operationValue": "2021-12-31",
+                        "operation": "lte"
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dspace:extraMetadata": { "med:weight__gte": 70 } } }
+            {
+                "dcat:dataset": {
+                    "extraMetadata": {
+                        "med:weight": {
+                            "operationValue": 70,
+                            "operation": "gte"
+                        }
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dspace:extraMetadata": { "med:weight__lte": 70 } } }
+            {
+                "dcat:dataset": {
+                    "extraMetadata": {
+                        "med:weight": {
+                            "operationValue": 70,
+                            "operation": "lte"
+                        }
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dcat:keyword__in": ["science", "health"] } }
+            {
+                "dcat:dataset": {
+                    "dcat:keyword": {
+                        "operationValue": ["science", "health"],
+                        "operation": "in"
+                    }
+                }
+            }
           ```
         - ```json
-          { "dcat:dataset": { "dcterms:title@en__contains": "example" } }
+            {
+                "dcat:dataset": {
+                    "dcterms:title@en": {
+                        "operationValue": "example",
+                        "operation": "contains"
+                    }
+                }
+            }
           ```
 
         """
